--- a/src/templates/Main/index.module.css
+++ b/src/templates/Main/index.module.css
@@ -1,11 +1,11 @@
 .mainContainer {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .mainBox {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 @media (max-width: 768px) {
